// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scope element tag names add bearer scope match snapshot 1`] = `
Object {
  "file": "add-bearer-scope.tsx",
  "postContent": "import { Prop } from \\"@bearer/core\\";
@Component({
    tag: \\"feature-action\\",
    styleUrl: \\"feature.css\\",
    shadow: true
})
class RootComponent {
    renderFromANotherProp() {
        return <sponge-bob />;
    }
    render() {
        return (<div>
        <sponge-bob />
        <patrick />
      </div>);
    }
    constructor() { }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop()
    BEARER_ID: string;
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() { if (this.setupId) {
        this.bearerContext.setupId = this.setupId;
    } }
}
@Component({
    tag: 'sponge-bob'
})
class SubComponent {
    render() {
        return <div />;
    }
    constructor() { }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop()
    BEARER_ID: string;
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() { if (this.setupId) {
        this.bearerContext.setupId = this.setupId;
    } }
}
@Component({
    tag: 'patrick'
})
class Patrick {
    render() {
        return <div />;
    }
    constructor() { }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop()
    BEARER_ID: string;
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() { if (this.setupId) {
        this.bearerContext.setupId = this.setupId;
    } }
}
",
}
`;

exports[`With provided scenario ID add bearer scope match snapshot 1`] = `
Object {
  "file": "add-bearer-scope.tsx",
  "postContent": "import { Prop } from \\"@bearer/core\\";
@Component({
    tag: \\"bearer-feature-action-xyz\\",
    styleUrl: \\"feature.css\\",
    shadow: true
})
class RootComponent {
    renderFromANotherProp() {
        return <sponge-bob />;
    }
    render() {
        return (<div>
        <sponge-bob />
        <patrick />
      </div>);
    }
    constructor() { }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop()
    BEARER_ID: string;
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() { if (this.setupId) {
        this.bearerContext.setupId = this.setupId;
    } }
}
@Component({
    tag: 'sponge-bob'
})
class SubComponent {
    render() {
        return <div />;
    }
    constructor() { }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop()
    BEARER_ID: string;
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() { if (this.setupId) {
        this.bearerContext.setupId = this.setupId;
    } }
}
@Component({
    tag: 'patrick'
})
class Patrick {
    render() {
        return <div />;
    }
    constructor() { }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop()
    BEARER_ID: string;
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() { if (this.setupId) {
        this.bearerContext.setupId = this.setupId;
    } }
}
",
}
`;
